# monovis2024

./: .gitignore  .gitmodules  README.md  boost_download.bash  boost_install.bash  config.yaml  enter_point.py  monovis  opencv_download.bash  opencv_get_dependencies.bash  opencv_install.bash
cpp/: CMakeLists.txt  calibrateCamera.bash  calibrationAdvancedParams.xml  calibrationResults_1.xml  camera45FOVMain.toml  camera_main.toml  ceres_install.bash  config.toml  deploy.bash  gcc-install-from-sources.sh  install_ntcore.bash  notes.md  perfParse.py  redis_test  service_apriltag  service_pose  suit_sparse_install.bash  uninstall_dependency.bash
cpp/CNC/python/: const.py  requirements.txt  send_cord_command.py
cpp/apriltags_pyhton/src/: const.py  estimator.py  server.py  world.py
cpp/config/: 90FOV_1.xml  90FOV_2.xml  90FOV_3.xml  90_FOVshort_1.xml  90_FOVshort_2.xml  90_FOVshort_3.xml  calib_alvin_laptop90FOV.xml  calibrationResults_2.xml  cameras.toml  field_config.toml  unity_main.xml
cpp/foo/: main.cpp
cpp/interactive_calib/: README.md  frameProcessor.cpp
cpp/src/: CameraReader.cpp  Server.cpp  ServerAsync.cpp  common.cpp  const.cpp  echo_server.cpp  entry.cpp  foo.cpp  global.cpp  helpers.cpp  redis.test.cpp  tasks.cpp
cpp/src/apriltag/: Estimator.ipp  NvidiaCuApriltagsEstimator.cpp  OpenCVArucoEstimator.cpp  apriltag.hpp  common.cpp  cuEstimator.cpp  estimator.cpp  world.cpp  worldDef.cpp
cpp/src/async/: macro.cpp  pipeline.cpp  signaling.cpp  synchronization.cpp  task.cpp
cpp/src/camera/: Camera.cpp  CameraData.cpp  camera.cpp  cameraData.cpp
cpp/src/conf/: cameraConfigDef.cpp  parser.cpp  serviceConfigDef.cpp
cpp/src/network/: ApriltagPose.cpp  ReadNetworkFrame.cpp  RobotPose.cpp  TagLocation.cpp  network_time.cpp  publishers.cpp  redis.cpp
cpp/src/services/: EstimateApriltag.cpp  PoseTracker.cpp  ReefAlign.cpp
cpp/src/world/: Field.cpp  Solvers.cpp  TypeDefs.cpp  World.cpp
cpp/src/worldPose/: Solvers.cpp  TypeDefs.cpp  World.cpp
cpp/tests/: apriltag.world.test.cpp
cpp/windowsTC/: Dockerfile  install_ntcore.py  raspberrypi_toolchain.cmake
src/: const.py  helpers.py
src/cameras/: camera_reader.py
src/ctrl_server/: clock.py  server.py  stream.py
